--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Streamdata Gallery Auto Scaling
+title: Streamdata API Gallery - Auto Scaling
+description: A gallery of APIs to demonstrate what is possible when it comes to making data, content, and algorithms more real time, and event-driven as part of the API economy.
 url: auto-scaling.streamdata.gallery
 tag: Auto Scaling
 markdown: kramdown
